# cob-controller

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/address/: mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/health/: service.rs
src/profile/: controller.rs  service.rs
src/queue/: envelope.rs  mod.rs
src/redis/: mod.rs
