[package]
name = "cob-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
redis = { version = "0.29.0", features = ["r2d2"] }
r2d2 = "0.8.10"
dotenvy = "0.15.7"
sysinfo = "0.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ethers = { version = "2.0.14", features = ["rustls"] }
hex = "0.4.3"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-fmt",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-test",
]
